--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-burger-menu": "^2.8.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "renovate": "^37.74.0"
