--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   },
   "dependencies": {
     "@types/react-burger-menu": "^2.8.6",
+    "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
     "renovate": "^37.74.0"
   },
   "devDependencies": {
